--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <!--To make responsive work-->
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+        
         <title>Boolean Academy</title>
         <!-- Fonts -->
         <link
